Alteração de escala

--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -92,6 +92,10 @@
         <div class="Pr-Kelton">
             <h1 class="titulo">Pr Kelton</h1>
             <ul>
+                <li><a href="https://www.letras.mus.br/fernandinho/392435/" target="_blank">Te adorar</a> - D</li>
+                <li><a href="https://www.letras.mus.br/drops-ina/tudo-e-teu/" target="_blank">Tudo é Teu</a> - G</li>
+                <li><a href="https://www.letras.mus.br/julia-vitoria/alem-do-rio-azul/" target="_blank">Além do rio azul</a> - G</li>
+                <li><a href="https://www.letras.mus.br/harpa-crista/450173/" target="_blank">Guarda o contato (Harpa 77)</a> - B</li>
                 <li><a href="https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/">O fogo arderá sobre o altar</a> - Am</li>
                 <li><a href="https://www.letras.mus.br/theo-rubia/pode-morar-aqui/">Pode morar aqui</a> - E</li>
                 <li><a href="https://www.letras.mus.br/gabriela-rocha/eu-navegarei/">Eu navegarei</a> - Am</li>
@@ -183,6 +187,9 @@
             <h1 class="titulo">Kétanny</h1>
             <ul>
                 <li>Lindo momento - E</li>
+                <li>Uma flor gloriosa - G</li>
+                <li>Em tua presença - G</li>
+                <li>Gratidão - E</li>
                 
             </ul>
        
