Correção de nome da música

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -29,7 +29,7 @@
 
 
 
-            <div class="musica2"><a href="https://www.letras.mus.br/gabriela-rocha/vida-aos-sepulcros-part-elevation-worship/" target="_blank">Vida ao sepulcro</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/paulo-cesar-baruk/vida-aos-sepulcros/#key=7" target="_blank" class="tom">E</a></p><br>
+            <div class="musica2"><a href="https://www.letras.mus.br/gabriela-rocha/vida-aos-sepulcros-part-elevation-worship/" target="_blank">Vida aos sepulcros</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/paulo-cesar-baruk/vida-aos-sepulcros/#key=7" target="_blank" class="tom">E</a></p><br>
                
                <div><a href="https://www.youtube.com/watch?v=wfFTSbxyI1M" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
