--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (05)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (12)</a></li>
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (07)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (14)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
     <li><button id="conselho" onclick="gerarConselho()">Mensagem do dia</button></li>
 </ul>
@@ -83,8 +83,8 @@
 
                 <tr>
                     <td>Domingo (14)</td>
-                    <td><span class="piscar">Jenifer</span></td>
-                    <td>Sarah Kétanny Pr Kelton Any Josi</td>
+                    <td><span class="piscar">Pr Kelton</span></td>
+                    <td>Sarah Kétanny Any Josi</td>
                     <td>Diego</td>
                     <td>Kétanny</td>
                     <td>-</td>
