Correção de uma palavra

--- a/Hnos congregacionais/hinos-congregacionais-index.html
+++ b/Hnos congregacionais/hinos-congregacionais-index.html
@@ -31,7 +31,7 @@
     <li><a href="https://www.letras.mus.br/aline-barros/rompendo-em-fe/" target="_blank">Rompendo em fé</a></li>
     <li><a href="https://www.letras.mus.br/j-neto/183690/" target="_blank"> Pensando bem</a></li>
     <li>Não há Deus maior</li>
-    <li><a href="https://www.letras.com/isadora-pompeo/nada-pode-calar-um-adorador-part-eyshila/" target="_blank">Nada pode calar um adorador adorador</a></li>
+    <li><a href="https://www.letras.com/isadora-pompeo/nada-pode-calar-um-adorador-part-eyshila/" target="_blank">Nada pode calar um adorador</a></li>
     <li>Em Espírito, em vardade</li>
     <li>Porque Ele vive</li>
     <li>Santo Espírito</li>
