Coloquei tom nas músicas

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -30,15 +30,15 @@
 
 
             <div class="musica2"><a href="https://www.letras.mus.br/toque-no-altar/533478/" target="_blank">Olha pra mim
-            </a><p class="nome">Tom<a href="https://www.cifraclub.com.br/davi-sacer/olha-pra-mim/" target="_blank" class="tom">G</a></p><br>
+            </a><p class="nome">Tom<a href="https://www.cifraclub.com.br/davi-sacer/olha-pra-mim/#key=5" target="_blank" class="tom">D</a></p><br>
                
-               <div><a href="https://www.youtube.com/watch?v=QkNseQqh0T0" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+               <div><a href="https://www.youtube.com/watch?v=lv_4SGMQ2i0&t=7s" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
                </div>
 
 
             <div class="musica3"><a href="https://www.letras.mus.br/marcelo-markes/eu-tenho-voce/
-             "  target="_blank">Eu tenho você</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+             "  target="_blank">Eu tenho você</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/marcelo-markes/eu-tenho-voce-part-isadora-pompeo/simplificada.html#key=5" target="_blank" class="tom">D</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=3YlXIAqI-kY" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
