--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (26)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (03)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-          <div class="musica1"><a href="https://www.letras.mus.br/kleber-lucas/201572/" target="_blank">Eu te agradeço Deus</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+          <!--<div class="musica1"><a href="https://www.letras.mus.br/kleber-lucas/201572/" target="_blank">Eu te agradeço Deus</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=9z0tZpzdzUw" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -41,7 +41,7 @@
              "  target="_blank">Eu tenho você</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/marcelo-markes/eu-tenho-voce-part-isadora-pompeo/simplificada.html#key=5" target="_blank" class="tom">D</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=3YlXIAqI-kY" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>!-->
 
                </main>
                </body>
