--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,13 +14,13 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (03)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (10)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
-
+<!--
           <div class="musica1"><a href="https://www.letras.mus.br/nair-nany/melhor-amigo-o-que-seria-de-mim-part-eunice-zumbuca-e-dimy-francisco/" target="_blank">Melhor amigo + O que seria de mim?</a><p class="nome">Tom<a href="https://www.cifras.com.br/cifra/nair-nany/melhor-amigo-o-que-seria-de-mim-part-eunice-zumbuca-e-dimy-francisco" target="_blank" class="tom">G#m</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=lmm9iKoSpHc" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
@@ -41,7 +41,7 @@
              "  target="_blank">Te louvarei</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=dt_VMijQ8KI" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>-->
 
                </main>
                </body>
