Músicas de sexta

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                    
                <tr>
                     <td>Sexta (10)</td>
-                    <td><span class="piscar">Kétanny</span></td>
+                    <td><span class="piscar">Josi</span></td>
                     <td>Jennifer Any Josi Sarah Pr Kelton</td>
                     <td>Kétanny</td>
                     <td>-</td>
