Troca de música

--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -22,7 +22,7 @@
             
             <div class="menu">
 
-       <div class="musica1"><a href="https://www.letras.mus.br/fernandinho/yeshua/"target="_blank">Yeshua, vem saltando sobre os montes</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+       <div class="musica1"><a href="https://www.letras.mus.br/fernandinho/yeshua/"target="_blank">Yeshua, vem saltando sobre os montes</a><p class="nome">Tom<a href="" target="_blank" class="tom">Bm</a></p>
 
              <div class="icon"> <a href="https://www.youtube.com/watch?v=5z28salONNg" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div></div>
            
