--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (17)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (24)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-          <div class="musica1"><a href="https://www.letras.mus.br/david-quinlan/190810/" target="_blank">Essência de adoração - Kétanny</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+          <!--<div class="musica1"><a href="https://www.letras.mus.br/david-quinlan/190810/" target="_blank">Essência de adoração - Kétanny</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=K5io3ygSUj0" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -40,7 +40,7 @@
              "  target="_blank">Santificação - Kétanny</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=GbMJaz3nRoE" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>-->
 
                </main>
                </body>
