--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
                     <td><span class="piscar">Pr Kelton</span></td>
                     <td>Sarah Josi Any Kétanny Jenifer</td>
                     <td>Kétanny</td>
-                    <td>Diego</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>João</td>
+                    <td>Diego</td>
                 </tr>
 
                 <tr>
                     <td>Domingo (26)</td>
                     <td><span class="piscar">Jenifer</span></td>
-                    <td>Sarah Pr Kelton Kétanny Josi Any</td>
+                    <td>Sarah Kétanny Josi Any</td>
                     <td>Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>João</td>
+                    <td>Pr Kelton</td>
                 </tr>
 
                  <tr>
