Atualizei as músicas

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <nav>
     
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (24)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (31)</a></li>
     
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (26)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (02)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
    <li><a href="Hnos congregacionais/hinos-congregacionais-index.html" target="_blank">Hinos congregacionais</a></li>
    
@@ -124,12 +124,23 @@
                  <tr>
                     <td>Sexta (31)</td>
                     <td><span class="piscar">Josi</span></td>
-                    <td>Sarah Pr Kelton Kétanny Jenifer Any</td>
+                    <td>Sarah Kétanny Jenifer Any</td>
                     <td>Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>João</td>
+                    <td>Pr Kelton</td>
+                </tr>
+
+                <tr>
+                    <td>Domingo (02)</td>
+                    <td><span class="piscar">Josi</span></td>
+                    <td>Sarah Kétanny Jenifer Any</td>
+                    <td>Kétanny</td>
+                    <td>Diego</td>
+                    <td>-</td>
+                    <td>Gustavo</td>
+                    <td>Pr Kelton</td>
                 </tr>
 
             </thead>
