--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (31)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (07)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-          <div class="musica1"><a href="https://www.letras.mus.br/voz-da-verdade/192851/" target="_blank">O escudo</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+         <!--<div class="musica1"><a href="https://www.letras.mus.br/voz-da-verdade/192851/" target="_blank">O escudo</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=o9q-Q1lqhDA" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -39,7 +39,7 @@
             <div class="musica3"><a href="https://www.letras.mus.br/nivea-soares/rei-do-meu-coracao/
              "  target="_blank">Rei do meu coração</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
-                 <div><a href="https://www.youtube.com/watch?v=GQBJ2rZHAR8" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+                 <div><a href="https://www.youtube.com/watch?v=GQBJ2rZHAR8" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>-->
                </div>
 
                </main>
