--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <tr>
                     <td>Sexta (21)</td>
                     <td><span class="piscar">Sarah</span></td>
-                    <td>Josi Any Kétanny Jenifer</td>
+                    <td>Any Kétanny Jenifer</td>
                     <td>Kétanny</td>
                     <td>-</td>
                     <td>-</td>
