--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (21)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (28)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-         <div class="musica1"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Quebro meu vaso</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+         <!--<div class="musica1"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Quebro meu vaso</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=3pfN_MyIdrA" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -40,7 +40,7 @@
              "  target="_blank">Promessas</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=YckFv7QYuEM" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div><!-->
 
                </main>
                </body>
