--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <nav>
     
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (21)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (28)</a></li>
     
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (23)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (30)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
    <li><a href="Hnos congregacionais/hinos-congregacionais-index.html" target="_blank">Hinos congregacionais</a></li>
    
@@ -131,13 +131,13 @@
 
                 <tr>
                     <td>Domingo (30)</td>
-                    <td><span class="piscar">Pr Kelton</span></td>
+                    <td><span class="piscar">Josi</span></td>
                     <td>Sarah Kétanny Jenifer Any</td>
                     <td>Kétanny</td>
-                    <td>-</td>
+                    <td>Diego</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Diego</td>
+                    <td>Pr Kelton</td>
                 </tr>
 
             </thead>
