Alteração de músicas

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -29,9 +29,9 @@
 
 
 
-            <div class="musica2"><a href="" target="_blank">Toda terra + Para Ti eu vou</a><p class="nome">Tom<a href="" target="_blank" class="tom">C</a></p><br>
+            <div class="musica2"><a href="" target="_blank">Para Ti eu vou + É tudo sobre Você + Pai nosso</a><p class="nome">Tom<a href="" target="_blank" class="tom">C</a></p><br>
                
-               <div><a href="" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+               <div><a href="https://www.youtube.com/watch?v=Eni87HjOPEQ" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
                </div>
 
