--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -21,7 +21,7 @@
             
            <div class="menu">
 
-         <div class="musica1"><a href="https://www.letras.mus.br/harpa-crista/451212/" target="_blank">Jesus, o bom amigo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/jesus-bom-amigo-198/#key=0" target="_blank" class="tom">A</a></p><br>
+         <!--<div class="musica1"><a href="https://www.letras.mus.br/harpa-crista/451212/" target="_blank">Jesus, o bom amigo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/harpa-crista/jesus-bom-amigo-198/#key=0" target="_blank" class="tom">A</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=ddB3VVgPCow" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -40,7 +40,7 @@
              "  target="_blank">Tudo é perda</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/#capo=0" target="_blank" class="tom">C</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=qxzQR5uwWsk" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div><!-->
 
                </main>
                </body>
