--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             <tbody class="corpo-tabela">
                 <tr>
                     <td>Sexta (05)</td>
-                    <td><span class="piscar">Pr Kelton</span></td>
+                    <td><span class="piscar">Sarah</span></td>
                     <td>Any Jenifer Kétanny Josi Sarah</td>
                     <td>Kétanny</td>
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>João</td>
+                    <td>Pr Kelton</td>
                 </tr>
                 <tr>
                     <td>Domingo (07)</td>
