Correção na escala

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                    
                <tr>
                     <td>Sexta (12)</td>
-                    <td><span class="piscar">Sarah</span></td>
-                    <td>Jennifer Kétanny Any Josi Pr Kelton</td>
+                    <td><span class="piscar">Josi</span></td>
+                    <td>Jennifer Kétanny Any Sarah</td>
                     <td>Kétanny</td>
                     <td>-</td>
                     <td>-</td>
@@ -102,8 +102,8 @@
             
                 <tr>
                     <td>Sexta (19)</td>
-                    <td><span class="piscar">Josi</span></td>
-                    <td>Any Kétanny Jenifer Pr Kelton Sarah</td>
+                    <td><span class="piscar">Pr Kelton</span></td>
+                    <td>Any Kétanny Jenifer Josi Sarah</td>
                     <td>Kétanny</td>
                     <td>-</td>
                     <td>-</td>
