--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,24 +14,24 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (05)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (12)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-         <div class="musica1"><a href="https://www.letras.mus.br/anderson-freire/acalma-o-meu-coracao/" target="_blank">Acalma o meu coração</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+         <div class="musica1"><a href="https://www.letras.mus.br/isaias-saad/enche-me-part-gabriela-rocha/" target="_blank">Enche-me</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
-           <div><a href="https://www.youtube.com/watch?v=4NBmNvqmnqg" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+           <div><a href="https://www.youtube.com/watch?v=ozBlvwVizXI" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
             </div>
 
 
 
-            <div class="musica2"><a href="https://www.letras.mus.br/luma-elpidio/liberta-me-de-mim/" target="_blank">Liberta-me de mim</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+            <div class="musica2"><a href="https://www.letras.mus.br/gabi-sampaio/teu-toque/" target="_blank">Teu toque</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                
-               <div><a href="https://www.youtube.com/watch?v=Ot8KIh6-uEU" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+               <div><a href="https://www.youtube.com/watch?v=i1Tz2jny2mw" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
                </div>
 
