--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -206,6 +206,7 @@
         <div class="Kétanny">
             <h1 class="titulo">Kétanny</h1>
             <ul>
+                <li>Pra Ti Eu Vou + É Tudo Sobre Você + Pai Nosso - G</li>
                 <li>Lindo momento - E</li>
                 <li>Uma flor gloriosa - G</li>
                 <li>Em tua presença - G</li>
