--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (12)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (19)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-         <div class="musica1"><a href="https://www.letras.mus.br/isaias-saad/enche-me-part-gabriela-rocha/" target="_blank">Enche-me</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+       <!--  <div class="musica1"><a href="https://www.letras.mus.br/isaias-saad/enche-me-part-gabriela-rocha/" target="_blank"></a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=ozBlvwVizXI" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -36,7 +36,7 @@
                </div>
 
 
-           <!-- <div class="musica3"><a href="https://www.letras.mus.br/felipe-rodrigues/tudo-e-perda/
+            <div class="musica3"><a href="https://www.letras.mus.br/felipe-rodrigues/tudo-e-perda/
              "  target="_blank">Tudo é perda</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/#capo=0" target="_blank" class="tom">C</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=qxzQR5uwWsk" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
