Nova escala e músicas

--- a/Louvor dia 31/Dia-31-index.html
+++ b/Louvor dia 31/Dia-31-index.html
@@ -11,9 +11,9 @@
 
     <ol class="nomes">
 
-    <li><a href="https://www.youtube.com/watch?v=aLHniDx88_w" target="_blank">Tu és poderoso</a></li>
-    <li><a href="https://www.youtube.com/watch?v=8BLpVdFvDfE" target="_blank">Salmo 126</a></li>
-     <li><a href="https://www.youtube.com/watch?v=_OBktpRlqM0" target="_blank">Tempo de festa</a></li>
+    <li><a href="https://www.letras.mus.br/lukas-agustinho/tu-es-poderoso-part-gabriela-rocha/" target="_blank">Tu és poderoso - F</a></li>
+    <li><a href="https://www.letras.mus.br/ministerio-zoe/salmos-126/" target="_blank">Salmo 126 - Bb</a></li>
+     <li><a href="https://www.letras.mus.br/diante-do-trono/45492/" target="_blank">Tempo de festa - A</a></li>
     
 </ol>
 </body>
