--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <nav>
     
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (26)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (09)</a></li>
     
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (04)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (11)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
    <li><a href="Hnos congregacionais/hinos-congregacionais-index.html" target="_blank">Hinos congregacionais</a></li>
 
-   <li><a href="Louvor dia 31/Dia-31-index.html" target="_blank">Culto da virada</a></li>
+   <!--<li><a href="Louvor dia 31/Dia-31-index.html" target="_blank">Culto da virada</a></li><!-->
 
    
    
