Troca de ministro

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                    
                <tr>
                     <td>Sexta (16)</td>
-                    <td><span class="piscar">Kétanny</span></td>
-                    <td>Jennifer Any Sarah Pr Kelton</td>
+                    <td><span class="piscar">Pr Kelton</span></td>
+                    <td>Jennifer Any Sarah Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
@@ -137,8 +137,8 @@
 
                  <tr>
                     <td>Sexta (30)</td>
-                    <td><span class="piscar">Pr Kelton</span></td>
-                    <td>Sarah Josi Jenifer Any Kétanny</td>
+                    <td><span class="piscar">Josi</span></td>
+                    <td>Sarah Jenifer Any Kétanny Pr Kelton</td>
                     <td>Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
