Troca de música

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -36,9 +36,9 @@
                </div>
 
 
-            <div class="musica3"><a href="https://www.letras.mus.br/davi-sacer/1984483/" target="_blank">Tua graça me basta</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+            <div class="musica3"><a href="https://www.letras.mus.br/sarah-farias/deixa-eu-te-usar/" target="_blank">Deixa eu te usar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
-                 <div><a href="https://www.youtube.com/watch?v=4y0_rOSnb_g" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+                 <div><a href="https://www.youtube.com/watch?v=nHdc9lJigtc" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
 
                </main>
