Louvores de domingo

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (09)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (16)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-       <div class="musica1"><a href="https://www.letras.mus.br/ministerio-zoe/quando-a-luz-se-apagar/" target="_blank">Quando a luz se apagar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+       <!--<div class="musica1"><a href="https://www.letras.mus.br/ministerio-zoe/quando-a-luz-se-apagar/" target="_blank">Quando a luz se apagar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=J6VQji4aIc4" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -39,7 +39,7 @@
             <div class="musica3"><a href="https://www.letras.mus.br/sarah-farias/deixa-eu-te-usar/" target="_blank">Deixa eu te usar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=nHdc9lJigtc" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div><!-->
 
                </main>
                </body>
