Alteração da escala

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (16)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (23)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-       <div class="musica1"><a href="https://www.letras.mus.br/fernandinho/galileu/" target="_blank">Galileu</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+      <!-- <div class="musica1"><a href="https://www.letras.mus.br/fernandinho/galileu/" target="_blank">Galileu</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=D1GDDvrfnfc" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -39,7 +39,7 @@
             <div class="musica3"><a href="https://www.letras.mus.br/aline-barros/127758/" target="_blank">Digno é o Senhor</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=Ja0h1aGvMKo" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>-->
 
                </main>
                </body>
