--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,13 +14,13 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (30)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (06)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
-
+<!--
        <div class="musica1"><a href="https://www.letras.mus.br/fernandinho/nao-mais-escravos/" target="_blank">Não mais escravos</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/fernandinho/nao-mais-escravos/#key=0" target="_blank" class="tom">A</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=cPWuFBnsYek" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
@@ -39,7 +39,7 @@
             <div class="musica3"><a href="https://www.letras.mus.br/andre-aquino/em-seu-nome-part-gabriela-rocha/" target="_blank">Em teu nome</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/andre-aquino/em-seu-nome-part-gabriela-rocha/" target="_blank" class="tom">G</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=bHooZ7OGN1I" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>-->
 
                </main>
                </body>
