--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -135,6 +135,9 @@
             <h1 class="titulo">Jenifer</h1>
                     
     <ul>
+        <li>Gratidão + Novo Dia - D</li>
+        <li>Pra sempre + Nada além do sangue - E</li>
+        <li>Quebrantado - C</li>
         <li>Vem me buscar + A terra clama + Yahweh se manifestará - E</li>
         <li>Até que o Senhor venha + Quem é esse? - E</li>
         <li>Santo - C#m</li>
